syntax = "proto3";

package wa;

// WhatsApp Message Structure
message WAMessage {
    MessageKey key = 1;
    Message message = 2;
    uint64 messageTimestamp = 3;
    string status = 4;
}

// Message Key
message MessageKey {
    string remoteJid = 1;
    bool fromMe = 2;
    string id = 3;
}

// Main Message Container
message Message {
    oneof content {
        string conversation = 1;
        ImageMessage imageMessage = 2;
        VideoMessage videoMessage = 3;
        AudioMessage audioMessage = 4;
        DocumentMessage documentMessage = 5;
        ContactMessage contactMessage = 6;
        LocationMessage locationMessage = 7;
        ButtonsMessage buttonsMessage = 8;
        ListMessage listMessage = 9;
        PollCreationMessage pollCreationMessage = 10;
        StickerMessage stickerMessage = 11;
    }
}

// Image Message
message ImageMessage {
    string url = 1;
    string mimetype = 2;
    string caption = 3;
    bytes jpegThumbnail = 4;
    uint32 width = 5;
    uint32 height = 6;
}

// Video Message
message VideoMessage {
    string url = 1;
    string mimetype = 2;
    string caption = 3;
    bytes jpegThumbnail = 4;
    uint32 width = 5;
    uint32 height = 6;
    uint32 seconds = 7;
}

// Audio Message
message AudioMessage {
    string url = 1;
    string mimetype = 2;
    uint32 seconds = 3;
    bool ptt = 4;
}

// Document Message
message DocumentMessage {
    string url = 1;
    string mimetype = 2;
    string title = 3;
    uint64 fileLength = 4;
    bytes jpegThumbnail = 5;
}

// Contact Message
message ContactMessage {
    string displayName = 1;
    string vcard = 2;
}

// Location Message
message LocationMessage {
    double degreesLatitude = 1;
    double degreesLongitude = 2;
    string name = 3;
    string address = 4;
}

// Buttons Message
message ButtonsMessage {
    string contentText = 1;
    string footerText = 2;
    repeated Button buttons = 3;
}

// Button
message Button {
    string buttonId = 1;
    ButtonText buttonText = 2;
    string type = 3;
}

// Button Text
message ButtonText {
    string displayText = 1;
}

// List Message
message ListMessage {
    string title = 1;
    string description = 2;
    string buttonText = 3;
    string listType = 4;
    repeated Section sections = 5;
    string footerText = 6;
}

// List Section
message Section {
    string title = 1;
    repeated Row rows = 2;
}

// List Row
message Row {
    string rowId = 1;
    string title = 2;
    string description = 3;
}

// Poll Creation Message
message PollCreationMessage {
    string name = 1;
    repeated string options = 2;
    uint32 selectableOptionsCount = 3;
}

// Sticker Message
message StickerMessage {
    string url = 1;
    bytes pngThumbnail = 2;
    string mimetype = 3;
    uint32 width = 4;
    uint32 height = 5;
    bool isAnimated = 6;
}